feat: adds animations and imports file for scss

--- a/src/styles/_imports.scss
+++ b/src/styles/_imports.scss
@@ -1,2 +1,9 @@
 @import "./variables";
 @import "../component/toggle/toggle.module.scss";
+@import "../component/checkbox/checkbox.module.scss";
+@import "../component/colorBadge/colorBadge.module.scss";
+@import "../component/colorPalette/colorPalette.module.scss";
+@import "../component/card/card.module.scss";
+@import "../views/homepage/homepage.module.scss";
+@import "../component/tooltip/tooltip.module.scss";
+@import "./animations.scss";
