fix: function type fixes for colorBadge

--- a/src/component/card/card.module.scss
+++ b/src/component/card/card.module.scss
@@ -17,6 +17,9 @@
       cursor: pointer;
     }
   }
+  &--preventClick {
+    cursor: not-allowed;
+  }
   &_description {
     font-size: 12px;
     font-weight: 400;
