--- a/src/component/checkbox/checkbox.module.scss
+++ b/src/component/checkbox/checkbox.module.scss
@@ -19,6 +19,18 @@
   border: 1px solid var(--black);
   transition: all 0.2s ease;
 }
+.checkbox_wrapper {
+  padding: 10px;
+  aspect-ratio: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s;
+  &:hover {
+    border-radius: 100%;
+    background-color: var(--lightGreen);
+  }
+}
 .checkbox_wrapper .cbx span:first-child svg {
   position: absolute;
   z-index: 1;
@@ -49,9 +61,6 @@
 .checkbox_wrapper:hover  span:first-child {
   width: 100%;
   height: 100%;
-}
-.checkbox_wrapper .cbx span:last-child {
-  margin-left: 8px;
 }
 
 .checkbox_wrapper .cbx:hover span:first-child {
