--- a/src/component/newCard/newCard.module.scss
+++ b/src/component/newCard/newCard.module.scss
@@ -1,9 +1,10 @@
 .newCard {
   position: relative;
   z-index: 99;
-  height: 100%;
+  height: auto;
   border-radius: 7.5px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  animation: bubble 0.4s ease-in-out;
   &_image {
     position: absolute;
     top: -10px;
@@ -12,16 +13,34 @@
   &_inline {
     padding: 15px;
   }
+  &_edit {
+    cursor: pointer;
+  }
   &--top {
     margin-bottom: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
   &_activity {
-    padding: 5px 25px;
-    background-color: rgb(214, 45, 45);
-    border-radius: 5px;
-    color: white;
-    margin-bottom: 5px;
-    width: fit-content;
+    &--red,
+    &--green {
+      padding: 5px 25px;
+      background-color: rgb(214, 45, 45);
+      border-radius: 5px;
+      color: white;
+      margin-bottom: 5px;
+      width: fit-content;
+    }
+    &--red {
+      background-color: #fa533c;
+    }
+    &--green {
+      background-color: rgb(56, 195, 56);
+    }
+  }
+  &_linked {
+    height: 35px;
   }
   &_action {
     font-size: 20px;
