--- a/src/component/menu/menu.module.scss
+++ b/src/component/menu/menu.module.scss
@@ -12,3 +12,12 @@
   font-size: 20px;
   font-weight: 600;
 }
+@media (max-width: 768px) {
+  .menu {
+    width: 100%;
+    padding: 5px;
+    p {
+      display: none;
+    }
+  }
+}
