style: refactors drawer and color palette for mobile screens

--- a/src/styles/_imports.scss
+++ b/src/styles/_imports.scss
@@ -7,3 +7,8 @@
 @import "../views/homepage/homepage.module.scss";
 @import "../component/tooltip/tooltip.module.scss";
 @import "./animations.scss";
+@import "../layout/sidebar/sidebar.module.scss";
+@import "../views/new/new.module.scss";
+@import "../component/menu/menu.module.scss";
+@import "../component/newCard/newCard.module.scss";
+@import "../component/drawer/drawer.module.scss";
