--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,4 +6,10 @@
   --white: #ffffff;
   --lightGreen: #afc6bd;
   --grey: #f9f9f9;
+  --greyV2: #f1f4f5;
+  --color-primary: #ee00ff;
+  --color-secondary: #f490f2;
+  --color-tertiary: rgb(232, 125, 242);
+  --color-quaternary: #830085;
+  --color-quinary: #770069;
 }
